[package]
name = "deterministic-wasi-ctx"
version = "0.1.26"
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"
description = "A wasi-common WasiCtx implementation that is fully deterministic"
repository = "https://github.com/Shopify/deterministic-wasi-ctx"
keywords = ["wasi"]
categories = ["wasm"]

[dependencies]
anyhow = "1.0.56"
async-trait = "0.1.53"
cap-primitives = "3.0.0"
wasi-common = ">= 20.0.0, < 27.0.0"
rand_core = "0.6.3"
rand_pcg = "0.3.1"

[dev-dependencies]
more-asserts = "0.3.1"
wasmtime = "26.0.1"
wasmtime-wasi = "26.0.0"
