[package]
name = "deterministic-wasi-ctx"
version = "3.0.0"
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"
description = "A wasmtime-wasi WasiCtx implementation that is fully deterministic"
repository = "https://github.com/Shopify/deterministic-wasi-ctx"
keywords = ["wasi"]
categories = ["wasm"]

[dependencies]
anyhow = "1.0.56"
async-trait = "0.1.53"
cap-primitives = "3.0.0"
# Newer versions drop support for WASI preview 1.
wasi = "0.11.0"
wasmtime = { version = "34.0.0", default-features = false }
wasmtime-wasi = "34.0.2"
rand_core = "0.6.3"
rand_pcg = "0.3.1"

[dev-dependencies]
more-asserts = "0.3.1"
wasmtime = { version = "34.0.0", default-features = false, features = [
    "cranelift", # Required to compile modules in tests.
    "wat",       # We use WAT to create some invalid WASI p1 modules.
] }
